GeneWeb version 2.04
--------------------

* Setup program
  - [Jun 19, 99] Changed GEDCOM import menu to reflect new option "-charset"
    of "ged2gwb" (see below).

* GeneWeb Daemon/CGI (gwd)
  - [Jun 19, 99] Added in ancestors long display the ability to select
    the displaying of siblings and the displaying of notes.
  - [Jun 19, 99] Changed presentation of ancestors displaying main menu.

* Gedcom to GeneWeb (ged2gwb)
  - [Jun 19, 99] Can now translate from MSDOS characters encoding. Added
    option "-charset" which can be followed by "ANSEL", "ASCII" or "MSDOS".
    Removed options "-ansel" and "-no_ansel".
    Warning: in GEDCOM files, the charset "IBMPC" (which is not standard
    GEDCOM 5.5) is by default interpreted as "ASCII", *not* "MSDOS"; to
    override this default, the option "-charset MSDOS" will have to be used.

GeneWeb version 2.03
--------------------

* Setup program
  - [Jun 7, 99] Added a Spanish version (Luis Castro Guzman).
  - [Jun 1, 99] The location to open is now always "http://localhost:2316/",
    independant from the selected language (no more need to end the location
    with "fr" or "en"): the page is displayed in the selected language.
  - [May 15, 99] Added deletion of ".gwo" file after then "gwc" operation.
  - [May 9, 99] Added predefined palette combination in "data base parameters";
    changed presentation of all page.
  - [May 9, 99] Added system to forbid non local accesses.
  - [May 7, 99] Fixed bug: recovering data base from old version of GeneWeb
    did not work when the old directory held spaces.
  - [May 7, 99] Fixed bad behavior under Windows: "GWU.EXE" (in uppercase)
    was not regognized when searching for old GeneWeb versions.
  - [May 7, 99] Fixed bug: "cleanup" under Windows did not work.

* GeneWeb Daemon/CGI (gwd)
  - [Jun 7, 99] No more (stupid) abbreviation for "Number" in update forms:
    Did not work for many languages.
  - [Jun 3, 99] Added ability to use a new predefined term "+before" in the