@@ -1,4 +1,4 @@
-# $Id: lexicon.txt,v 2.57 1999-06-19 11:04:24 ddr Exp $
+# $Id: lexicon.txt,v 2.58 1999-06-19 11:33:18 ddr Exp $
 # Copyright (c) 1999 INRIA
 
      !charset
@@ -51,7 +51,7 @@ se:  f&ouml;r att se den f&ouml;rsta
 
      to try again with this number, or do "back" and change it yourself
 de: , um es mit dieser Nummer nochmals zu versuchen, oder dr&uuml;cken Sie "back" und &auml;ndern Sie es selbst
-dk:  for at fors&oslash;ge igen med dette nummer, eller v&aelig;lg "back" og v&aelig;lg et andet
+dk:  for at fors&oslash;ge igen med dette nummer, eller g&aring; tilbage og v&aelig;lg et andet
 en:  to try again with this number, or do "back" and change it yourself
 es:  para ensayar de nuevo con este n&uacute;mero, o haga "back" y escoja otro
 fr:  pour r&eacute;essayer avec ce num&eacute;ro, ou bien faites "back" et choisissez-en un autre
@@ -1537,7 +1537,7 @@ se: fil
 
     first free number
 de: erste freie Nummer
-dk: f&oslash;rste ledige nummer
+dk: f&oslash;rste ledige l&oslash;benummer
 en: first free number
 eo: una dispona nombro
 es: primer n&uacute;mero libre
