@@ -70,6 +70,13 @@ value="bgcolor=#FFFFFF text=#333333 link=#006699 vlink=#999900">
 <font color="#006699">lien</font>
 <font color="#999900">visit&eacute;</font>
 </td>
+<td bgcolor="#FFFFEE">
+<input type=radio name=proposed_body_prop
+value="bgcolor=#FFFFEE text=#000000 link=#006699 vlink=#990000">
+<font color="#000000">texte</font>
+<font color="#006699">lien</font>
+<font color="#990000">visit&eacute;</font>
+</td>
 <td bgcolor="#CCCCCC">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#CCCCCC text=#000000 link=#0000CC vlink=#660066">
@@ -77,6 +84,9 @@ value="bgcolor=#CCCCCC text=#000000 link=#0000CC vlink=#660066">
 <font color="#0000CC">lien</font>
 <font color="#660066">visit&eacute;</font>
 </td>
+</tr>
+
+<tr>
 <td bgcolor="#FFFF00">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#FFFF00 text=#FF6600 link=#FF0033 vlink=#336633">
@@ -84,9 +94,6 @@ value="bgcolor=#FFFF00 text=#FF6600 link=#FF0033 vlink=#336633">
 <font color="#FF0033">lien</font>
 <font color="#336633">visit&eacute;</font>
 </td>
-</tr>
-
-<tr>
 <td bgcolor="#CCCC66">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#CCCC66 text=#330000 link=#CC0000 vlink=#003300">
@@ -101,6 +108,9 @@ value="bgcolor=#FFFF99 text=#330000 link=#CC0000 vlink=#333333">
 <font color="#CC0000">lien</font>
 <font color="#333333">visit&eacute;</font>
 </td>
+</tr>
+
+<tr>
 <td bgcolor="#99CCCC">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#99CCCC text=#000066 link=#0000CC vlink=#003366">
@@ -108,9 +118,6 @@ value="bgcolor=#99CCCC text=#000066 link=#0000CC vlink=#003366">
 <font color="#0000CC">lien</font>
 <font color="#003366">visit&eacute;</font>
 </td>
-</tr>
-
-<tr>
 <td bgcolor="#CC99FF">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#CC99FF text=#000000 link=#FF0033 vlink=#660066">
@@ -125,6 +132,9 @@ value="bgcolor=#CCFF99 text=#666600 link=#006699 vlink=#003300">
 <font color="#006699">lien</font>
 <font color="#003300">visit&eacute;</font>
 </td>
+</tr>
+
+<tr>
 <td bgcolor="#FFCC00">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#FFCC00 text=#330000 link=#CC0000 vlink=#660066">
@@ -132,9 +142,6 @@ value="bgcolor=#FFCC00 text=#330000 link=#CC0000 vlink=#660066">
 <font color="#CC0000">lien</font>
 <font color="#660066">visit&eacute;</font>
 </td>
-</tr>
-
-<tr>
 <td bgcolor="#00FF33">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#00FF33 text=#0000CC link=#FF0099 vlink=#660066">
@@ -149,6 +156,9 @@ value="bgcolor=#006699 text=#CCFFCC link=#FFFF00 vlink=#00FFFF">
 <font color="#FFFF00">lien</font>
 <font color="#00FFFF">visit&eacute;</font>
 </td>
+</tr>
+
+<tr>
 <td bgcolor="#330000">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#330000 text=#FF6666 link=#FFCC00 vlink=#CCFF99">
@@ -156,9 +166,6 @@ value="bgcolor=#330000 text=#FF6666 link=#FFCC00 vlink=#CCFF99">
 <font color="#FFCC00">lien</font>
 <font color="#CCFF99">visit&eacute;</font>
 </td>
-</tr>
-
-<tr>
 <td bgcolor="#003300">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#003300 text=#CCCC66 link=#FFFFFF vlink=#FFFF00">
@@ -173,6 +180,9 @@ value="bgcolor=#333333 text=#CCCCCC link=#FF6666 vlink=#CCCC66">
 <font color="#FF6666">lien</font>
 <font color="#CCCC66">visit&eacute;</font>
 </td>
+</tr>
+
+<tr>
 <td bgcolor="#666600">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#666600 text=#FFFFFF link=#FFFF00 vlink=#99CCFF">
@@ -180,9 +190,6 @@ value="bgcolor=#666600 text=#FFFFFF link=#FFFF00 vlink=#99CCFF">
 <font color="#FFFF00">lien</font>
 <font color="#99CCFF">visit&eacute;</font>
 </td>
-</tr>
-
-<tr>
 <td bgcolor="#000000">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#000000 text=#99CCFF link=#FFFF00 vlink=#CCCC66">
@@ -197,6 +204,9 @@ value="bgcolor=#333333 text=#FFFFFF link=#99CCFF vlink=#CC99FF">
 <font color="#99CCFF">lien</font>
 <font color="#CC99FF">visit&eacute;</font>
 </td>
+</tr>
+
+<tr>
 <td bgcolor="#CC0000">
 <input type=radio name=proposed_body_prop
 value="bgcolor=#CC0000 text=#FFFFFF link=#FFFF00 vlink=#00FFFF">
@@ -205,6 +215,7 @@ value="bgcolor=#CC0000 text=#FFFFFF link=#FFFF00 vlink=#00FFFF">
 <font color="#00FFFF">visit&eacute;</font>
 </td>
 </tr>
+
 </table>
 </table></dl>
 
